--- a/README.rdoc
+++ b/README.rdoc
@@ -4,11 +4,13 @@
 
 == DESCRIPTION:
 
-FIX (describe your package)
+Screwcap is a library that wraps Net::SSH and makes it easy to perform actions on remote servers.  It's not smart and does not make any assumptions about your setup.  
+
+The most obvious task you could use screwcap for is deploying rails applications to remote servers.
 
 == FEATURES/PROBLEMS:
 
-* FIX (list of features or problems)
+* Screwcap is currently not ready for production use as it is under active development.
 
 == SYNOPSIS:
 
@@ -20,13 +22,13 @@ FIX (describe your package)
 
 == INSTALL:
 
-* FIX (sudo gem install, anything else)
+* gem install screwcap
 
 == LICENSE:
 
 (The MIT License)
 
-Copyright (c) 2010 FIXME full name
+Copyright (c) 2010 Grant Ammons
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
